Avances de edición para Empleados por parte de RH

--- a/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.html
+++ b/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.html
@@ -53,8 +53,14 @@
         
     
     <div class="contenedor-botones">
+
+      <button class="botonc" pButton pRipple aria-label="Cancelar" severity="info" (click)="redirigir()">
+        <span pButtonLabel>Cancelar</span>
+      </button>
+      
       <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="guardarCurso()">
         <span pButtonLabel>Guardar</span>
       </button>
     </div>
 </p-card>
+
