--- a/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.html
+++ b/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.html
@@ -17,5 +17,11 @@
   </ng-template>
 </p-table>
 
+<div class="contenedor-botones">
+  <button class="botonc" pButton pRipple aria-label="Cancelar" severity="info" (click)="redirigir()">
+    <span pButtonLabel>Cancelar</span>
+  </button>
+  
   <p-button label="Guardar" (click)="guardar()"></p-button>
+</div>
   
