--- a/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.scss
+++ b/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.scss
@@ -23,7 +23,24 @@ input,label, p-autocomplete, p-datepicker {
     box-sizing: border-box; /* Asegura que el padding no afecte el ancho */
     margin-left: 35px;
 }
+
 .contenedor-botones {
-  display: flex;
+  display: flex;            
+  gap: 10px;               
   justify-content: flex-end;
+}
+
+.boton {
+  margin: 0;               
+}
+.botonc {
+  background-color: rgb(214, 43, 43); /* Rojo */
+  border: 2px solid rgb(214, 43, 43); /* Contorno rojo */
+  color: white; /* Color del texto */
+  transition: all 0.3s ease; /* Transición suave al cambiar el estado */
+}
+
+.botonc:hover {
+  background-color: rgb(255, 77, 77); /* Un rojo más claro al pasar el mouse */
+  border-color: rgb(255, 77, 77); /* El contorno también cambia a un rojo más claro */
 }
