--- a/src/app/modules/empleado/pages/perfil/perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container" [ngClass]="{'edit-mode': isEditMode}">
   <p-toast></p-toast>
   <p-card>
     <ng-template pTemplate="header">
@@ -6,159 +6,216 @@
     </ng-template>
 
     <div class="contenedor-botones">
-      <button pButton [label]="isEditMode ? 'Cancelar' : 'Editar'" [icon]="isEditMode ? 'pi pi-times' : 'pi pi-pencil'"
-        (click)="toggleEditMode()"></button>
-      <button pButton label="Guardar" icon="pi pi-save" *ngIf="isEditMode" class="p-button-success"
-        (click)="saveChanges()"></button>
+      <button pButton 
+              [label]="isEditMode ? 'Cancelar' : 'Editar'" 
+              [icon]="isEditMode ? 'pi pi-times' : 'pi pi-pencil'"
+              [class]="isEditMode ? 'p-button-outlined p-button-danger' : 'p-button-outlined'"
+              (click)="toggleEditMode()"></button>
+      <button pButton 
+              label="Guardar" 
+              icon="pi pi-save" 
+              *ngIf="isEditMode" 
+              class="p-button-success"
+              (click)="saveChanges()"></button>
     </div>
 
     <!-- Cambiar contraseña -->
-    <p-fieldset legend="Cambiar contraseña" *ngIf="isEditMode">
-      <div class="label-container">
-        <p-floatlabel>
-          <p-password [(ngModel)]="currentPassword" [toggleMask]="true" />
-          <label>Contraseña actual</label>
-        </p-floatlabel>
-      </div>
-      <div class="label-container">
-        <p-floatlabel>
-          <p-password [(ngModel)]="newPassword" [toggleMask]="true" />
-          <label>Nueva contraseña</label>
-        </p-floatlabel>
+    <p-fieldset legend="Cambiar contraseña" *ngIf="isEditMode" styleClass="password-fieldset">
+      <div class="p-grid">
+        <div class="label-container">
+          <p-floatLabel>
+            <p-password [(ngModel)]="currentPassword" [toggleMask]="true" [feedback]="false" />
+            <label>Contraseña actual</label>
+          </p-floatLabel>
+        </div>
+        <div class="label-container">
+          <p-floatLabel>
+            <p-password [(ngModel)]="newPassword" [toggleMask]="true" [feedback]="true" />
+            <label>Nueva contraseña</label>
+          </p-floatLabel>
+        </div>
       </div>
     </p-fieldset>
 
     <!-- Domicilio -->
-    <p-fieldset legend="Domicilio">
-      <div class="p-grid p-formgrid">
-        <div class="p-field p-col-12 p-md-6" *ngFor="let field of domicilioCampos">
-          <input pInputText *ngIf="empleado.Domicilio" [(ngModel)]="empleado.Domicilio[field]" [readonly]="!isEditMode"
-            class="p-inputtext" />
-
-          <label>{{ getLabel(field) }}</label>
+    <p-fieldset legend="Domicilio" [toggleable]="true" styleClass="address-fieldset">
+      <div class="p-grid">
+        <div class="label-container" *ngFor="let field of domicilioCampos">
+          <p-floatLabel>
+            <input pInputText 
+                  *ngIf="empleado.Domicilio" 
+                  [(ngModel)]="empleado.Domicilio[field]" 
+                  [readonly]="!isEditMode" />
+            <label>{{ getLabel(field) }}</label>
+          </p-floatLabel>
         </div>
       </div>
     </p-fieldset>
 
     <!-- Contacto -->
-    <p-fieldset legend="Contacto">
+    <p-fieldset legend="Contacto" [toggleable]="true" styleClass="contact-fieldset">
+      <!-- Correos electrónicos -->
       <div class="contact-group">
+        <div class="contact-header">
+          <span>Correos electrónicos</span>
+          <button pButton 
+                icon="pi pi-plus" 
+                class="p-button-rounded p-button-text p-button-sm" 
+                (click)="addNewEmail()"
+                *ngIf="isEditMode"></button>
+        </div>
+        
         <div *ngFor="let correo of empleado.CorreoElectronico; let i = index" class="contact-field">
           <p-inputGroup>
-            <input pInputText type="email" [(ngModel)]="empleado.CorreoElectronico[i]" [readonly]="!isEditMode"
-              placeholder="Correo Electrónico" />
-            <button pButton icon="pi pi-trash" class="p-button-danger" (click)="removeEmail(i)"
-              *ngIf="isEditMode"></button>
+            <span class="p-inputgroup-addon">
+              <i class="pi pi-envelope"></i>
+            </span>
+            <input pInputText 
+                  type="email" 
+                  [(ngModel)]="empleado.CorreoElectronico[i]" 
+                  [readonly]="!isEditMode"
+                  placeholder="Correo Electrónico" />
+            <button pButton 
+                  icon="pi pi-trash" 
+                  class="p-button-danger" 
+                  (click)="removeEmail(i)"
+                  *ngIf="isEditMode"></button>
           </p-inputGroup>
         </div>
-        <button pButton icon="pi pi-plus" label="Agregar Correo" class="p-button-text" (click)="addNewEmail()"
-          *ngIf="isEditMode"></button>
       </div>
 
+      <!-- Teléfonos -->
       <div class="contact-group">
+        <div class="contact-header">
+          <span>Teléfonos</span>
+          <button pButton 
+                icon="pi pi-plus" 
+                class="p-button-rounded p-button-text p-button-sm" 
+                (click)="addNewPhone()"
+                *ngIf="isEditMode"></button>
+        </div>
+        
         <div *ngFor="let telefono of empleado.Telefono; let i = index" class="contact-field">
           <p-inputGroup>
-            <input pInputText type="text" [(ngModel)]="empleado.Telefono[i]" [readonly]="!isEditMode"
-              placeholder="Teléfono" />
-            <button pButton icon="pi pi-trash" class="p-button-danger" (click)="removePhone(i)"
-              *ngIf="isEditMode"></button>
+            <span class="p-inputgroup-addon">
+              <i class="pi pi-phone"></i>
+            </span>
+            <input pInputText 
+                  type="text" 
+                  [(ngModel)]="empleado.Telefono[i]" 
+                  [readonly]="!isEditMode"
+                  placeholder="Teléfono" />
+            <button pButton 
+                  icon="pi pi-trash" 
+                  class="p-button-danger" 
+                  (click)="removePhone(i)"
+                  *ngIf="isEditMode"></button>
           </p-inputGroup>
         </div>
-        <button pButton icon="pi pi-plus" label="Agregar Teléfono" class="p-button-text" (click)="addNewPhone()"
-          *ngIf="isEditMode"></button>
       </div>
     </p-fieldset>
 
-    <!-- Referencia Familiar -->
-    <p-fieldset legend="Referencia Familiar">
-      <div *ngFor="let referencia of empleado.ReferenciaFamiliar; let refIndex = index">
-        <p-fieldset [legend]="referencia.NombreFamiliar">
-          <div class="p-grid">
-            <div class="p-col-12 p-md-6">
-              <p-floatlabel>
-                <input pInputText [(ngModel)]="referencia.NombreFamiliar" [readonly]="!isEditMode" />
-                <label>Nombre</label>
-              </p-floatlabel>
-            </div>
-            <div class="p-col-12 p-md-6">
-              <p-floatlabel>
-                <input pInputText [(ngModel)]="referencia.Parentesco" [readonly]="!isEditMode" />
-                <label>Parentesco</label>
-              </p-floatlabel>
-            </div>
-          </div>
-
-          <div class="contact-section">
-            <div class="contact-header">
-              <span>Teléfonos</span>
-              <button pButton icon="pi pi-plus" class="p-button-rounded p-button-text"
-                (click)="addNewFamilyPhone(refIndex)" *ngIf="isEditMode"></button>
-            </div>
-            <div *ngFor="let phone of referencia.Telefono; let i = index" class="contact-field">
-              <p-inputGroup>
-                <input pInputText [(ngModel)]="referencia.Telefono[i]" [readonly]="!isEditMode" />
-                <button pButton icon="pi pi-times" class="p-button-danger p-button-text"
-                  (click)="removeFamilyPhone(refIndex, i)" *ngIf="isEditMode"></button>
-              </p-inputGroup>
-            </div>
-          </div>
-
+    <!-- Referencias Familiares -->
+    <p-fieldset legend="Referencias Familiares" [toggleable]="true" styleClass="family-fieldset">
+      <div *ngFor="let referencia of empleado.ReferenciaFamiliar; let refIndex = index" class="referencia-item">
+        <div class="referencia-header">
+          <h3>{{referencia.NombreFamiliar}} - {{referencia.Parentesco}}</h3>
+          
+          <button pButton 
+                icon="pi pi-trash" 
+                class="p-button-danger p-button-text p-button-sm referencia-delete"
+                (click)="eliminarReferenciaFamiliar(referencia._id, refIndex)" 
+                *ngIf="isEditMode"></button>
+        </div>
+        
+        <div class="referencia-content">
           <div class="label-container">
-            <p-floatlabel>
+            <p-floatLabel>
+              <input pInputText [(ngModel)]="referencia.NombreFamiliar" [readonly]="!isEditMode" />
+              <label>Nombre</label>
+            </p-floatLabel>
+          </div>
+          
+          <div class="label-container">
+            <p-floatLabel>
+              <input pInputText [(ngModel)]="referencia.Parentesco" [readonly]="!isEditMode" />
+              <label>Parentesco</label>
+            </p-floatLabel>
+          </div>
+          
+          <div class="label-container">
+            <p-floatLabel>
               <input pInputText [(ngModel)]="referencia.CorreoElectronico" [readonly]="!isEditMode" />
               <label>Correo Electrónico</label>
-            </p-floatlabel>
+            </p-floatLabel>
           </div>
-        </p-fieldset>
+        </div>
+
+        <!-- Teléfonos de referencia familiar -->
+        <div class="contact-section">
+          <div class="contact-header">
+            <span>Teléfonos</span>
+            <button pButton 
+                  icon="pi pi-plus" 
+                  class="p-button-rounded p-button-text p-button-sm"
+                  (click)="addNewFamilyPhone(refIndex)" 
+                  *ngIf="isEditMode"></button>
+          </div>
+          
+          <div *ngFor="let phone of referencia.Telefono; let i = index" class="contact-field">
+            <p-inputGroup>
+              <span class="p-inputgroup-addon">
+                <i class="pi pi-phone"></i>
+              </span>
+              <input pInputText [(ngModel)]="referencia.Telefono[i]" [readonly]="!isEditMode" />
+              <button pButton 
+                    icon="pi pi-times" 
+                    class="p-button-danger"
+                    (click)="removeFamilyPhone(refIndex, i)" 
+                    *ngIf="isEditMode"></button>
+            </p-inputGroup>
+          </div>
+        </div>
       </div>
-    </p-fieldset>
 
-    <!-- perfil.component.html -->
-
-    <!-- Formulario para agregar nueva referencia -->
-    <div class="p-grid" *ngIf="isEditMode">
-      <div class="p-col-12">
-        <p-fieldset legend="Agregar Nueva Referencia Familiar">
+      <!-- Formulario para agregar nueva referencia -->
+      <div class="nueva-referencia-container" *ngIf="isEditMode">
+        <p-fieldset legend="Agregar Nueva Referencia" styleClass="add-reference-fieldset">
           <div class="p-grid">
-            <div class="p-col-12 p-md-3">
-              <p-floatlabel>
+            <div class="label-container">
+              <p-floatLabel>
                 <input pInputText [(ngModel)]="nuevaReferencia.NombreFamiliar" />
                 <label>Nombre</label>
-              </p-floatlabel>
+              </p-floatLabel>
             </div>
-            <div class="p-col-12 p-md-3">
-              <p-floatlabel>
+            
+            <div class="label-container">
+              <p-floatLabel>
                 <input pInputText [(ngModel)]="nuevaReferencia.Parentesco" />
                 <label>Parentesco</label>
-              </p-floatlabel>
+              </p-floatLabel>
             </div>
-            <div class="p-col-12 p-md-3">
-              <p-floatlabel>
+            
+            <div class="label-container">
+              <p-floatLabel>
                 <input pInputText [(ngModel)]="nuevaReferencia.Telefono[0]" />
                 <label>Teléfono</label>
-              </p-floatlabel>
+              </p-floatLabel>
             </div>
-            <div class="p-col-12 p-md-3">
-              <p-floatlabel>
+            
+            <div class="label-container">
+              <p-floatLabel>
                 <input pInputText [(ngModel)]="nuevaReferencia.CorreoElectronico" />
                 <label>Correo</label>
-              </p-floatlabel>
+              </p-floatLabel>
             </div>
           </div>
-          <button pButton label="Agregar Referencia" (click)="agregarReferenciaFamiliar()" class="p-mt-2"></button>
-        </p-fieldset>
-      </div>
-    </div>
-
-    <!-- Lista de referencias existentes -->
-    <p-fieldset legend="Referencias Familiares">
-      <div *ngFor="let referencia of empleado.ReferenciaFamiliar; let refIndex = index">
-        <p-fieldset [legend]="referencia.NombreFamiliar">
-          <!-- ... contenido existente ... -->
-
-          <!-- Botón para eliminar referencia -->
-          <button pButton icon="pi pi-trash" class="p-button-danger p-button-text"
-            (click)="eliminarReferenciaFamiliar(referencia._id, refIndex)" *ngIf="isEditMode"></button>
+          
+          <button pButton 
+                label="Agregar Referencia" 
+                icon="pi pi-plus"
+                class="p-button-outlined"
+                (click)="agregarReferenciaFamiliar()"></button>
         </p-fieldset>
       </div>
     </p-fieldset>
