--- a/src/app/modules/recursos-humanos/pages/empleado-list/empleado-list.component.scss
+++ b/src/app/modules/recursos-humanos/pages/empleado-list/empleado-list.component.scss
@@ -4,7 +4,24 @@
     transition: margin-left 0.3s ease;
     margin-right: 60px;
    }
-   .contenedor-botones {
-    display: flex;
+  .contenedor-botones {
+    display: flex;            
+    gap: 10px;               
     justify-content: flex-end;
+  }
+  
+  .boton {
+    margin: 0;               
+  }
+
+  .botonc {
+    background-color: rgb(214, 43, 43); /* Rojo */
+    border: 2px solid rgb(214, 43, 43); /* Contorno rojo */
+    color: white; /* Color del texto */
+    transition: all 0.3s ease; /* Transición suave al cambiar el estado */
+  }
+  
+  .botonc:hover {
+    background-color: rgb(255, 77, 77); /* Un rojo más claro al pasar el mouse */
+    border-color: rgb(255, 77, 77); /* El contorno también cambia a un rojo más claro */
   }
